Added receiving user team in tournament
